2002-11-30  Alan Modra  <amodra@bigpond.net.au>

	* ld.h, ldcref.c, ldctor.c, ldctor.h, ldemul.c, ldemul.h, ldexp.c,
	ldexp.h, ldfile.c, ldfile.h, ldgram.y, ldlang.c, ldlang.h, ldmain.c,
	ldmain.h, ldmisc.c, ldwrite.c, lexsup.c, mri.c, pe-dll.c, pe-dll.h,
	emulparams/elf32b4300.sh, emultempl/aix.em, emultempl/armcoff.em,
	emultempl/armelf.em, emultempl/armelf_oabi.em, emultempl/beos.em,
	emultempl/elf32.em, emultempl/generic.em, emultempl/gld960.em,
	emultempl/gld960c.em, emultempl/hppaelf.em, emultempl/linux.em,
	emultempl/lnk960.em, emultempl/m68kcoff.em, emultempl/mipsecoff.em,
	emultempl/mmix-elfnmmo.em, emultempl/mmixelf.em, emultempl/mmo.em,
	emultempl/needrelax.em, emultempl/pe.em, emultempl/ppc64elf.em,
	emultempl/sh64elf.em, emultempl/sunos.em, emultempl/ticoff.em: Replace
	boolean with bfd_boolean, true with TRUE, false with FALSE.  Simplify
	comparisons of bfd_boolean vars with TRUE/FALSE.  Formatting.

2002-11-27  David O'Brien  <obrien@FreeBSD.org>

	* configure.host: Fix generic FreeBSD configuration entry.

2002-11-27  H.J. Lu <hjl@gnu.org>

	* ld.texinfo: Add the missing `;' to sample version scripts.

2002-11-20  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf64ppc.sh (SEGMENT_SIZE): Don't define.

2002-11-14  Egor Duda  <deo@logos-m.ru>

	* ldmain.c (main): Make runtime relocs disabled by default. Remove
	assignment which has no effect.
	* pe-dll.h (pe_create_import_fixup): Change prototype.
	* pe-dll.c (make_runtime_pseudo_reloc): New function.
	(pe_create_runtime_relocator_reference): Ditto.
	(pe_create_import_fixup): Handle relocations with non-zero addends.
	* emultempl/pe.em: Add options --enable-runtime-pseudo-reloc and
	--disable-runtime-pseudo-reloc.
	(make_import_fixup): Handle relocations with non-zero addends. Create
	an external reference to _pei386_runtime_relocator symbol if at least
	one pseudo reloc was created.
	* ld.texinfo: Document --enable-runtime-pseudo-reloc and
	--disable-runtime-pseudo-reloc options.
